<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PitchIt</string>
    <string name="select_note">Select a note to practice</string>
    <string name="action_settings">Settings</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string> 
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="play">Listen </string>
    <string name="stop">Stop</string>
    <string name="record">Try yourself</string>
    <string name="perfect">Perfect!</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    
</resources>
